feat: Add package.json with project dependencies

--- a/package.json
+++ b/package.json
@@ -12,6 +12,15 @@
   "license": "MIT",
   "devDependencies": {
     "@tailwindcss/vite": "^4.1.13",
+    "@typescript-eslint/eslint-plugin": "^5.43.0",
+    "@typescript-eslint/parser": "^5.43.0",
+    "eslint": "^8.28.0",
+    "eslint-config-airbnb-base": "^15.0.0",
+    "eslint-config-airbnb-typescript": "^17.0.0",
+    "eslint-config-prettier": "^8.5.0",
+    "eslint-plugin-prettier": "^4.2.1",
+    "eslint-plugin-solid": "^0.8.0",
+    "prettier": "^3.6.2",
     "solid-devtools": "^0.34.3",
     "tailwindcss": "^4.1.13",
     "typescript": "^5.9.2",
@@ -19,6 +28,8 @@
     "vite-plugin-solid": "^2.11.8"
   },
   "dependencies": {
+    "@nanostores/solid": "^1.1.1",
+    "nanostores": "^1.0.1",
     "solid-js": "^1.9.9"
   }
 }
